<resources>
    <string name="app_name">新疆新闻</string>
    <string name="image">图片</string>
    <string name="index_text">باش بەت</string>
    <string name="index_text_h">باس بەت</string>
    <string name="video_text">بىۋاستە كۆرسىتىش</string>
    <string name="video_text_h">ارنا</string>
    <string name="service_text">تۇرمۇش مۇلازىمىتى</string>
    <string name="service_text_h">قىزمەت وتەۋ</string>
    <string name="personal_text">مېنىڭ</string>
    <string name="personal_text_h">مەنىڭ</string>
    <string name="manage_channel">قانال ئورۇنلاشتۇرۇش</string>
    <string name="manage_channel_m">ᠪᠤᠯᠤᠩ ᠠᠩᠭᠢᠯᠠᠯ ᠤᠨ ᠲᠣᠬᠢᠷᠠᠭᠤᠯᠤᠯᠲᠠ</string>
    <string name="manage_channel_h">ارناسى قۇرۋ</string>
    <string name="subscribe_my_category">ئۇزاق بېسىپ تەرتىپلەڭ ياكى ئۆچۈرۈڭ</string>
    <string name="subscribe_my_category_m">ᠤᠳᠠᠭᠠᠨ ᠳᠠᠷᠤᠵᠤ ᠳᠠᠷᠠᠭᠠᠯᠠᠯ ᠢ ᠵᠣᠬᠢᠴᠠᠭᠤᠯᠬᠤ ᠪᠤᠶᠤ ᠬᠠᠰᠤᠯᠲᠠ ᠬᠢᠵᠦ ᠪᠣᠯᠤᠨ᠎ᠠ</string>
    <string name="subscribe_my_category_h">رەت ٴتارتىبى بويىنشا نەمەسە باسىپ بويىنشا ٴوشىرىپ</string>
    <string name="subscribe_more_category">كۆرسىتىش قانىلى</string>
    <string name="subscribe_more_category_m">ᠲᠠᠨᠢᠯᠴᠠᠭᠤᠯᠬᠤ ᠰᠤᠪᠠᠭ</string>
    <string name="subscribe_more_category_h">كورسەتكەن ارناسى</string>
    <string name="more_category_tip">تېخىمۇ كۆپ قوشۇش</string>
    <string name="more_category_tip_h">باسىپ ۇستەمەلەپ اناعۇرلىم كوپ</string>
    <string name="personal_active">ھەركەتچان</string>
    <string name="submit">سۇنۇش</string>
    <string name="submit_h">جىبەرۋ</string>
    <string name="submit_m">ᠲᠤᠰᠢᠶᠠᠬᠤ</string>
    <string name="personal_message">خەۋەر يوللاش</string>
    <string name="personal_message_h">حابارىنا قاراعاندا ، جەتكىزۋ</string>
    <string name="complain_title">ئەرز تېما</string>
    <string name="complain_title_h">ارىز - تاقىرىبى</string>
    <string name="complain_content">ئەرز قىلىش مەزمۇنى</string>
    <string name="complain_content_h">ارىز - مازمۇنى</string>
    <string name="open">ئېچىش</string>
    <string name="open_h">اشايىن</string>
    <string name="close">ئەتمەك</string>
    <string name="close_h">جابۋ</string>
    <string name="personal_brightness">يورۇقلۇقى</string>
    <string name="personal_brightness_h">جارقىراۋى</string>
    <string name="personal_font">خەت نۇسخىسى</string>
    <string name="personal_font_h">ٴارىپ قۇرۋ</string>
    <string name="personal_cache">ساقلاش</string>
    <string name="personal_cache_h">ساقتاۋىشتار الاستاپ ،</string>
    <string name="personal_version">تەكشۈرۈلگەن نۇسخىسى</string>
    <string name="personal_version_h">تەكسەرۋ نۇسقا</string>
    <string name="personal_our">بىز كىم؟</string>
    <string name="personal_our_h">تۋرالى</string>
    <string name="get_paper_data">正在拉取数字报数据…</string>
    <string name="get_news_detail">正在拉取文章数据…</string>
    <string name="not_paper">当期无报</string>
    <string name="getDataFial">加载数据失败…</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载……</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_refreshing_label">正在加载中\u2026</string>
    <string name="input_pen">مەن ئىككى ئېغىز سۆزلەي</string>
    <string name="input_pen_m">ᠨᠠᠳᠠᠳᠤ ᠠᠪᠴᠤ ᠬᠡᠯᠡᠪᠡᠯ ᠬᠣᠶᠠᠷ ᠦᠭᠡ</string>
    <string name="input_pen_h">مەن ەكى اۋىز ٴسوز ايتايىن ،</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="search_text">ئىزدەش</string>
    <string name="search_text_m">ᠨᠡᠩᠵᠢᠯ </string>
    <string name="search_text_h">اقتارۋ</string>
    <string name="search_record">ئىزدەش خاتىرىسى</string>
    <string name="search_record_m">ᠬᠠᠢᠢᠯᠳᠠ ᠲᠡᠮᠳᠡᠭᠯᠡᠯ</string>
    <string name="search_record_h">ٴتىنتۋ ەستەلىگى</string>
    <string name="search_key_word">ئاچقۇچلۇق سۆزنى كىرگۈزۈڭ</string>
    <string name="search_key_word_m">ᠣᠷᠣᠬ᠋ᠣᠯ ᠵᠠᠩᠭᠢᠯᠠᠭ᠎ᠠ ᠶᠢᠨ ᠦᠰᠦᠭ </string>
    <string name="search_key_word_h">كىلت ەنگىزۋ ۇسىنىس</string>
    <string name="search_result">ئىزدەش نەتىجىسى</string>
    <string name="search_result_m">ᠬᠠᠢᠢᠯᠲᠠ ᠶ᠋ᠢᠨ ᠳ᠋ᠦ᠋ᠩ</string>
    <string name="search_result_h">ٴتىنتۋ ناتيجەسى</string>
    <string name="cancel">ئەمەلدىن قالدۇرۇش</string>
	<string name="cancel_h">بولدىرماۋ</string>
    <string name="save">جەزىملەشتۈرۈش</string>
    <string name="save_h">تۇراقتاندىرۋ</string>
    <string name="comment">我来评论</string>
    <string name="login">كىرىش</string>
    <string name="login_h">كىرۋ</string>
    <string name="regist">تىزىمغا ئالدۇرۇش</string>
    <string name="regist_h">تىركەلۋ</string>
    <string name="collect">يىغىپ ساقلاش</string>
    <string name="collect_h"> ساقتاۋ</string>
    <string name="message">ئۇچۇر</string>
    <string name="message_h">حابار</string>
    <string name="subscription">مېنىڭ مۇشتەرى بولۇش </string>
    <string name="subscription_h">مەنىڭ جۋرنالعا</string>
    <string name="active">پائالىيەت مەيدانى</string>
    <string name="active_h">قيمىلىالاڭىندا</string>
    <string name="suggestion">پىكىر- تەكلىپ</string>
    <string name="suggestion_h">پىكىرىن قابىلداپ ،</string>
    <string name="live">بىۋاسىتە كۆرسىتىش جەدۋىلى</string>
    <string name="live_h">تىكە تاراتۋ كەستە</string>
    <string name="complain">ئەرز قىلىش جەدۋىلى</string>
    <string name="complain_h">كەستە ارىز</string>
    <string name="add_complain">يېڭىدىن كۆپەيگەن ئەرز قىلىش</string>
    <string name="add_complain_h">تىڭنان ارىز -</string>
    <string name="complain_detail">تەپسىلىي ئەھۋالنى ئەرز</string>
    <string name="complain_detail_h">جاي - ارىز -</string>
    <string name="login_hint">يان تېلېفون نومۇرى</string>
    <string name="login_hint_m">ᠰᠢᠨ᠎ᠡ ᠭᠠᠷ ᠤᠲᠠᠰᠤᠨ ᠳ᠋ᠤᠭᠠᠷ</string>
    <string name="login_hint_h">قولفون ٴنومىرلى</string>
    <string name="password_hint">مەخپىي سىفىر</string>
    <string name="password_hint_m">ᠨᠢᠭᠤᠴᠠ  ᠨᠣᠮᠧᠷ</string>
    <string name="password_hint_h">قۇپيا ءسوز</string>
    <string name="forget_password">مەخپىي سىفىرنى ئۇنتۇپ قالغان</string>
    <string name="forget_password_h">قۇپيا سيفىرىن ۇمىتىپ</string>
    <string name="forget_password_m">ᠨᠢᠭᠤᠴᠠ ᠨᠣᠮᠧᠷ ᠪᠡᠨ ᠮᠠᠷᠲᠠᠵᠠᠢ</string>
    <string name="login_other">باشقا ئۇسۇل تىزىملىتىش</string>
    <string name="login_other_h">باسقا دا تاسىلدەرمەن شىقسا</string>
    <string name="edit_user">ماتېرىياللارنى تەھرىرلەش</string>
    <string name="edit_user_m">ᠮᠠᠲ᠋ᠧᠷᠢᠶᠠᠯ ᠢ ᠨᠠᠶᠢᠷᠠᠭᠤᠯᠬᠤ </string>
    <string name="edit_user_h">ماتەريالداردى رەداكسيالاۋ</string>
    <string name="edit_save">ساقلاش</string>
    <string name="user_photo">باش سۈرەت</string>
    <string name="user_photo_m">ᠲᠣᠯᠣᠭᠠᠶ ᠶᠢᠨ ᠬᠦᠷᠦᠭ</string>
    <string name="user_photo_h">باس سۋرەتى</string>
    <string name="basic_information">ئاساسىي ئۇچۇر</string>
    <string name="basic_information_h">نەگىزگى ينفورماتسيا</string>
    <string name="nick_name">ئىسىم</string>
    <string name="nick_name_h">بۇركەنشىك ات</string>
    <string name="more_setting">قۇرماق</string>
    <string name="more_setting_h">اناعۇرلىم كوپ قۇرۋ</string>
    <string name="phone_number">يان تېلېفون نومۇرى</string>
    <string name="phone_number_h">قولفون ٴنومىرلى</string>
    <string name="change_binding">باغلاق ئالماشتۇرۇش</string>
    <string name="change_binding_h">اۋىستىرۋ بايلاپ</string>
    <string name="change_password">مەخپىي شىفىرنى ئۆزگەرتىش</string>
    <string name="change_password_m">ᠨᠢᠭᠤᠴᠠ ᠺᠣᠳ᠋ ᠵᠠᠰᠠᠬᠤ</string>
    <string name="change_password_h">قۇپيا ٴنومىرىن</string>
    <string name="logout">چېكىنىش</string>
    <string name="logout_h">شىعۋ</string>
    <string name="comfirm">بېكىتىش</string>
    <string name="comfirm_h">كەسىم ايتۋ</string>
    <string name="setting">تەڭشەش</string>
    <string name="setting_h">ورناتۋ</string>
    <string name="change_phone">يان تېلېفون ئالماشتۇرۇپ باغلاش</string>
    <string name="change_phone_h">اۋىستىرۋ قول تەلەفون بايلاپ</string>
    <string name="change_phone_m">ᠰᠣᠯᠢᠬᠤ ᠭᠠᠷ ᠤᠲᠠᠰᠤ ᠪᠠᠨ ᠤᠶᠠᠬᠤ</string>
    <string name="new_phone">يېڭى تېلېفۇن</string>
    <string name="new_phone_m">ᠰᠢᠨ᠎ᠡ ᠭᠠᠷ ᠤᠲᠠᠰᠤᠨ ᠳ᠋ᠤᠭᠠᠷ</string>
    <string name="new_phone_h">جاڭا قول تەلەفون ٴنومىرلى</string>
    <string name="get_code">ئەۋەتىش</string>
    <string name="get_code_m">ᠢᠯᠡᠭᠡᠬᠦ</string>
    <string name="get_code_h">الۋ</string>
    <string name="code_hint">دەلىللەش كودى</string>
    <string name="code_hint_m">ᠰᠢᠯᠭᠠᠬᠤ ᠺᠣᠳ᠋</string>
    <string name="code_hint_h">دالەلدەۋ سيفرى</string>
    <string name="old_phone">كونا تېلېفۇن</string>
    <string name="old_phone_m">ᠬᠠᠭᠤᠴᠢᠨ ᠭᠠᠷ ᠤᠲᠠᠰᠤᠨ ᠳ᠋ᠤᠭᠠᠷ</string>
    <string name="old_phone_h">كونە قول تەلەفون ٴنومىرلى</string>
    <string name="old_password">كونا مەخپىي سىفىر</string>
    <string name="old_password_m">ᠬᠠᠭᠤᠴᠢᠨ ᠨᠢᠭᠤᠴᠠ  ᠨᠣᠮᠧᠷ</string>
    <string name="old_password_h">كونە ەنگىزۋ قۇپيا</string>
    <string name="new_password">يېڭى مەخپىي شىفىرنى كىرگۈزۈڭ</string>
    <string name="new_password_m">ᠰᠢᠨ᠎ᠡ ᠨᠢᠭᠤᠴᠠ ᠺᠣᠳ᠋</string>
    <string name="new_password_h">جاڭا قۇپيا ەنگىزۋ</string>
    <string name="repeat_new_password">مەخپىي سىفىرنى جەزملەشتۈرۈش</string>
    <string name="repeat_new_password_m">ᠰᠢᠨ᠎ᠡ ᠨᠢᠭᠤᠴᠠ  ᠨᠣᠮᠧᠷ</string>
    <string name="repeat_new_password_h">ۇسىنىس جاڭا قۇپيا</string>
    <string name="password_no_same">ئىككى قېتىم مەخپىي نومۇر بىردەك ئەمەس</string>
    <string name="password_no_same_h">ەكى رەتكى قۇپيا ءسوز ۇقساماي قالدى</string>
    <string name="pass_form">مەخپىي نومۇر 10 خانىلىق ھەرپ - بەلگە تەركىب تاپقان</string>
    <string name="revise_fail">تۈزىتىش كىرگۈزۈش مەغلۇپ بولدى</string>
    <string name="revise_success_and_login">ئۆزگەرتىلدى، قايتا تىزىملاش</string>
    <string name="news_comment">ئاخبارات ئوبزورى</string>
    <string name="news_comment_h">اقپارات شولۋى</string>
    <string name="my_collect">يىغىپ ساقلىماق</string>
    <string name="my_collect_m">ᠮᠢᠨᠦ ᠬᠤᠷᠢᠶᠠᠨ ᠬᠠᠳᠠᠭᠠᠯᠠᠬᠤ</string>
    <string name="my_collect_h">مەنىڭ ساقتاعان</string>
    <string name="my_active">پائالىيەت</string>
    <string name="my_active_m">ᠮᠢᠨᠦ ᠠᠵᠢᠯᠯᠠᠭ᠎ᠠ</string>
    <string name="my_active_h">مەنىڭ قيمىلىن</string>
    <string name="my_suggestion">پىكىرلىرىگە ئىنكاس قايتۇرۇش</string>
    <string name="my_suggestion_h">پىكىرىن قابىلداپ ،</string>
    <string name="my_suggestion_m">ᠰᠠᠨᠠᠯ ᠢ ᠪᠤᠴᠠᠭᠠᠬᠤ</string>
    <string name="suggestion_hint">سىزنىڭ قىممەتلىك پىكىر يېزىپ</string>
    <string name="suggestion_hint_h">ٴسىزدىڭ جازىپ قۇندى پىكىرلەر</string>
    <string name="suggestion_hint_m">ᠲᠠᠨ ᠤ ᠨᠠᠨᠳᠢᠨ ᠰᠠᠨᠠᠯ</string>
    <string name="regist_now">تىزىملاش</string>
    <string name="regist_now_h">تىركەلۋ</string>
    <string name="regist_tip">ھازىر ھېسابات نومۇرى</string>
    <string name="regist_tip_h">بۇرىنعى ەسەپ ٴنومىرى</string>
    <string name="find_password">مەخپىي نومۇرنى ئۇنتۇپ قالدىڭىزمۇ</string>
    <string name="find_password_h">قۇپيا سيفىرىن ۇمىتىپ</string>
    <string name="commit">بەرمەك</string>
    <string name="commit_h">بەرۋ</string>
    <string name="new_password_hint">يېڭى مەخپىي سىفىر</string>
    <string name="new_password_hint_m">ᠰᠢᠨ᠎ᠡ ᠨᠢᠭᠤᠴᠠ ᠺᠣᠳ᠋</string>
    <string name="new_password_hint_h">جاڭا قۇپيا ەنگىزۋ</string>
    <string name="reply_hint">قالدۇرغان بۇ تاللاپ بولغاندىن كېيىن كۆرسىتىلىشىچە ، ھەممە ئادەمگە دېمەك</string>
    <string name="directory">往期</string>
    <string name="my_message">خەۋەر</string>
    <string name="my_message_m">ᠮᠢᠨᠦ ᠮᠡᠳᠡᠭᠡ</string>
    <string name="my_message_h">حابار</string>
    <string name="copyright">Copyright © 2003 shougang.com.cn, All Rights Reserved</string>
    <string name="email_phone">邮编：100041  查号台：010-88291114</string>
</resources>