<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFF"
    android:orientation="vertical" >
    
    
    <RelativeLayout
        android:id="@+id/head_rlayout"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_alignParentTop="true"
        android:background="#FFF" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:layout_marginLeft="8dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/image"
            android:src="@drawable/back_arrow" />

        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/my_suggestion_h"
            android:textSize="18sp"
            />
        
        <View 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#b5b5b5"
            android:layout_alignParentBottom="true"
            />
            
    </RelativeLayout>
    
    <EditText 
        android:id="@+id/suggestion_txt"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_below="@+id/head_rlayout"
        android:hint="@string/suggestion_hint_h"
        android:gravity="right|top"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="4dp"
        android:background="@null"
        />
    
    <TextView 
        android:id="@+id/confirm"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/suggestion_txt"
        android:background="@drawable/suggestion_shape"
        android:gravity="center"
        android:textColor="#FFF"
        android:text="@string/submit_h"
        android:textSize="18sp"
        />

</RelativeLayout>
