<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="44dp"
	    android:layout_marginLeft="8dp"
	    android:layout_marginRight="8dp"
	    >
    
	    <ImageView
            android:id="@+id/back"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/image"
            android:src="@drawable/back_m" />
	    
	    
    </RelativeLayout>
 
    
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >
	    
        
        <EditText 
            android:id="@+id/user_phone"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:background="@null"
            android:layout_marginLeft="6dp"
            android:layout_centerVertical="true"
            android:hint="@string/login_hint_m"
            android:inputType="phone"
            />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/user_phone"
            android:background="#dcdcdc"
            android:layout_marginTop="6dp"
            />
        
    </RelativeLayout>
    
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginLeft="43dp"
        android:layout_marginRight="43dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >
	    
        
        <EditText 
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:background="@null"
            android:layout_marginRight="6dp"
            android:layout_centerVertical="true"
            android:hint="@string/password_hint_m"
            android:inputType="textPassword"
            />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/user_password"
            android:background="#dcdcdc"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            />
        
    </RelativeLayout>
    
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginLeft="43dp"
        android:layout_marginRight="43dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >
	    
        
        <TextView
            android:id="@+id/get_code"
            android:layout_width="68dp"
            android:layout_height="26dp"
            android:text="@string/get_code_m"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textColor="#dcdcdc"
            android:gravity="center"
            android:background="@drawable/login_shape_corner_m_white"
            />
        
        <EditText 
            android:id="@+id/user_code"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_toLeftOf="@+id/get_code"
            android:background="@null"
            android:layout_marginLeft="6dp"
            android:layout_centerVertical="true"
            android:hint="@string/code_hint_m"
            />
        
        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/user_code"
            android:background="#dcdcdc"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            />
        
        
    </RelativeLayout>
    
    
    
    <RelativeLayout 
        android:id="@+id/layout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginLeft="43dp"
        android:layout_marginRight="43dp"
        >
        
        <com.newgen.UI.MongolTextView 
	        android:id="@+id/reigst"
	        android:layout_width="52dp"
	    	android:layout_height="125dp"
	    	android:layout_marginLeft="28dp"
	        android:layout_marginTop="16dp"
	        android:text="@string/login"
	        android:layout_alignParentLeft="true"
	        android:gravity="center"
	        android:background="@drawable/login_shape_corner_m_red"
	        />
    
    
	    <com.newgen.UI.MongolTextView 
	        android:id="@+id/login"
	        android:layout_width="52dp"
	    	android:layout_height="125dp"
	        android:layout_marginRight="28dp"
	        android:layout_marginTop="16dp"
	        android:layout_alignParentRight="true"
	        android:background="@drawable/login_shape_corner_m_white"
	        />
        
    </RelativeLayout>
   

</LinearLayout>
